--- a/Client/myapp/package.json
+++ b/Client/myapp/package.json
@@ -15,11 +15,13 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
+    "react-multi-carousel": "^2.8.4",
     "react-redux": "^8.0.7",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
+    "swiper": "^9.3.2",
     "thunk": "^0.0.1",
     "web-vitals": "^2.1.4"
   },
