--- a/Client/myapp/package.json
+++ b/Client/myapp/package.json
@@ -27,6 +27,7 @@
     "slick-carousel": "^1.8.1",
     "swiper": "^9.3.2",
     "thunk": "^0.0.1",
+    "vercel": "^30.1.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
